import "PlayerVO.proto";
import "CampVO.proto";

option java_package = "com.pureland.common.protocal";
option java_outer_classname = "CampRespProtocal";

message CampResp {
	required CampVO campVO 				=1;
}
